Improved traceId header path in yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ kafka.bindings:
 spring:
     # Spring Kafka
     kafka:
-        trace.header: x-trace-id
+        header.traceId: x-trace-id
         bootstrap-servers: ${KAFKA_BROKER_ADDRESS:localhost:9092}
         properties:
             max.request.size: 2000000
